[package]
name = "quest_lock_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
axum = {version = "0.8.3"}
axum-auth = "0.8.1"
axum-macros = {version = "0.5.0"}
chrono = { version = "0.4.40", features = ["serde"] }
dotenv = "0.15.0"
http = "1.0"
http-body-util = "=0.1.3"
jwtk = "0.4.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = [
    "postgres",
    "runtime-tokio",
    "macros",
    "uuid",
    "time",
    "chrono",
    "json",
] }
thiserror = "1.0.58"
tokio = { version = "1.44", features = ["full"] }
tower = { version = "0.5.2", features = ["timeout"] }
tower-http = { version = "0.6.2", features = ["cors", "trace", "fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.16.0" , features = ["v7", "serde"] }
strum = { version = "0.27.1" }
strum_macros = { version = "0.27" }
base64 = { version = "0.22.1" }
